--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
     <div class="newSeason">
         <div class="nsItem">
-            <img src="https://images.pexels.com/photos/4753986/pexels-photo-4753986.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="https://images.pexels.com/photos/404280/pexels-photo-404280.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                 alt="" class="nsImg">
         </div>
         <div class="nsItem">
@@ -158,7 +158,7 @@
             </a>
         </div>
         <div class="nsItem">
-            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="https://images.pexels.com/photos/9555131/pexels-photo-9555131.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                 alt="" class="nsImg">
         </div>
     </div>
